--- a/index.html
+++ b/index.html
@@ -4,7 +4,55 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>
+      Dad Jokes So Bad, They're Good: Click for Laughs! | Funny Dad Jokes 2025
+    </title>
+    <meta
+      name="description"
+      content="Discover the funniest dad jokes that will make you laugh out loud. Click to enjoy and share the best dad humor on the web in 2025!"
+    />
+    <meta
+      name="keywords"
+      content="dad jokes, funny jokes, humor, comedy, 2025"
+    />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://yourdomain.com/dad-jokes" />
+    <meta
+      property="og:title"
+      content="Dad Jokes So Bad, They're Good: Click for Laughs!"
+    />
+    <meta
+      property="og:description"
+      content="Discover the funniest dad jokes that will make you laugh out loud. Click to enjoy and share the best dad humor on the web in 2025!"
+    />
+    <meta
+      property="og:image"
+      content="https://yourdomain.com/dad-jokes-image.jpg"
+    />
+    <meta property="og:url" content="https://yourdomain.com/dad-jokes" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Dad Jokes So Bad, They're Good: Click for Laughs!"
+    />
+    <meta
+      name="twitter:description"
+      content="Discover the funniest dad jokes that will make you laugh out loud. Click to enjoy and share the best dad humor on the web in 2025!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://yourdomain.com/dad-jokes-image.jpg"
+    />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "Dad Jokes So Bad, They're Good: Click for Laughs!",
+        "description": "Discover the funniest dad jokes that will make you laugh out loud. Click to enjoy and share the best dad humor on the web in 2025!",
+        "url": "https://yourdomain.com/dad-jokes"
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
