adding images and sharing option

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo_32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       Dad Jokes So Bad, They're Good: Click for Laughs! | Funny Dad Jokes 2025
@@ -16,7 +16,7 @@
       content="dad jokes, funny jokes, humor, comedy, 2025"
     />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://yourdomain.com/dad-jokes" />
+    <link rel="canonical" href="https://magicgenie.site/dadjokes" />
     <meta
       property="og:title"
       content="Dad Jokes So Bad, They're Good: Click for Laughs!"
@@ -25,11 +25,8 @@
       property="og:description"
       content="Discover the funniest dad jokes that will make you laugh out loud. Click to enjoy and share the best dad humor on the web in 2025!"
     />
-    <meta
-      property="og:image"
-      content="https://yourdomain.com/dad-jokes-image.jpg"
-    />
-    <meta property="og:url" content="https://yourdomain.com/dad-jokes" />
+    <meta property="og:image" content="/logo_32x32.png" />
+    <meta property="og:url" content="https://magicgenie.site/dadjokes" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
@@ -40,17 +37,14 @@
       name="twitter:description"
       content="Discover the funniest dad jokes that will make you laugh out loud. Click to enjoy and share the best dad humor on the web in 2025!"
     />
-    <meta
-      name="twitter:image"
-      content="https://yourdomain.com/dad-jokes-image.jpg"
-    />
+    <meta name="twitter:image" content="/logo_32x32.png" />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "WebPage",
         "name": "Dad Jokes So Bad, They're Good: Click for Laughs!",
         "description": "Discover the funniest dad jokes that will make you laugh out loud. Click to enjoy and share the best dad humor on the web in 2025!",
-        "url": "https://yourdomain.com/dad-jokes"
+        "url": "https://magicgenie.site/dadjokes"
       }
     </script>
   </head>
