--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
       }
     </script>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-WBT0306R6Z"
+  ></script>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
