add properly the gtag

--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
     async
     src="https://www.googletagmanager.com/gtag/js?id=G-WBT0306R6Z"
   ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-WBT0306R6Z");
+  </script>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
